# opengit

./: Cargo.toml  README.MD
.github/workflows/: release.yml
src/: format.rs  lib.rs  main.rs  operate.rs
tests/: test_format.rs  test_opreate.rs
